<resources>
    <string name="app_name">DriverManagement</string>
    <string name="Mytitle">Welcome to Your best Shop App</string>
    <string name="headertxt">Can you please enter Your Informations</string>
    <string name="Logintxt">Sign in</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="signuptxt">Sign Up</string>
    <string name="nom">last name</string>
    <string name="Prenom">first name</string>
    <string name="Telephone">phone</string>
    <string name="Courriel">mail</string>
    <string name="Login">Login</string>
    <string name="Motdepasse">password</string>
    <string name="usertype">User Type</string>
    <string name="vendorlocation">Vendor Location </string>

    <string name="validebtn">save</string>
    <string name="annulerbtn">cancel</string>

    <string name="offreproposal">Enter here and propose Your Merchandise</string>
    <string name="Logout">Logout</string>

    <string name="modele">model</string>
    <string name="couleur">color</string>
    <string name="immatriculation">registration</string>
    <string name="LieudeDRV">Start place</string>
    <string name="destination">End place </string>
    <string name="HeureduRDV">Time</string>
    <string name="places">Places</string>

    <string name="confirmationTitle">Your offer is saved!</string>
    <string name="confirmationSub">It will be available on the map!</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ok">ok</string>
    <string name="CancelOffre">Delete my offer</string>
    <string name="client">I m a Client</string>
    <string name="driver">I m a Vendor</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="mapsApi">you_api_key</string>
    <string name="LookAtOffres">see all offers</string>
    <string name="titleOffer">Describe Your Merchandise below</string>
    <string name="registerheader">Enter Your Informations here please</string>
    <string name="title_activity_updat_offer">UpdatOfferActivity</string>

</resources>